2007-04-11  Jim Evins  <evins@snaught.com>

	* src/cairo-label-path.c: (gl_cairo_label_path),
	(gl_cairo_rect_label_path), (gl_cairo_round_label_path),
	(gl_cairo_cd_label_path):
	* src/cairo-label-path.h:
	* src/mini-preview-pixbuf.c: (draw_paper), (draw_label_outlines),
	(draw_label_outline):
	* src/print.c: (draw_outline), (clip_to_outline):
	* src/view.c: (draw_bg_layer), (draw_fg_layer):
	* src/wdgt-mini-preview.c: (draw_labels):
	* src/wdgt-rotate-label.c: (drawingarea_update):
		Modified to universally use gl_cairo_label_path() to create paths
		for labels.  Added shadow to mini preview in rotate widget.

2007-04-10  Jim Evins  <evins@snaught.com>

	* libglabels/template.h:
	* libglabels/template.c: (gl_template_get_name_list_unique),
	(gl_template_get_name_list_all), (gl_template_from_name):
		Modified libglabels to allow you to get a list of all template names
		including all aliases or just a list of primary names of each unique
		template.
	* src/Makefile.am:
	* src/file.c: (gl_file_properties):
	* src/glabels.c: (main):
	* src/mini-preview-pixbuf-cache.h:
	* src/mini-preview-pixbuf-cache.c:
	* src/wdgt-media-select.c: (gl_wdgt_media_select_construct),
	(filter_changed_cb), (load_list):
		Added mini-preview pixbuf cache, so that only one mini-preview is
		needed for a unique template and gets reused for all aliases.  These
		pixbufs will also live for the life of the program so they are not
		rebuilt everytime a new label dialog is invoked.
	* src/mini-preview-pixbuf.c: (draw_paper),
	(draw_rect_label_outline), (draw_round_label_outline),
	(draw_cd_label_outline):
		Removed some comment artifacts.

2007-04-04  Jim Evins  <evins@snaught.com>

	* src/mini-preview-pixbuf.c: (gl_mini_preview_pixbuf_new),
	(draw_paper), (draw_label_outlines), (draw_rect_label_outline),
	(draw_round_label_outline), (draw_cd_label_outline):
	* src/wdgt-media-select.c: (load_list):
	* src/wdgt-rotate-label.c: (draw_cd_label_outline):
		Cosmetic enhancments to mini previews.
